--- a/WpfOnDotNetCoreSample/Views/MainWindow.xaml
+++ b/WpfOnDotNetCoreSample/Views/MainWindow.xaml
@@ -37,13 +37,15 @@
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition />
 			<ColumnDefinition />
+			<ColumnDefinition />
 		</Grid.ColumnDefinitions>
-		<TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" 
+		<TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" 
             VerticalAlignment="Center"
             HorizontalAlignment="Center"
             FontSize="48"
 		    Text="{Binding Ellapsed.Value}" />
 		<Button Grid.Row="1" Grid.Column="0" Content="Start" Command="{Binding StartCommand}" />
 		<Button Grid.Row="1" Grid.Column="1" Content="Stop" Command="{Binding StopCommand}" />
+		<Button Grid.Row="1" Grid.Column="2" Content="Reset" Command="{Binding ResetCommand}" />
 	</Grid>
 </Window>
