--- a/WpfOnDotNetCoreSample/Views/MainWindow.xaml
+++ b/WpfOnDotNetCoreSample/Views/MainWindow.xaml
@@ -6,15 +6,12 @@
     xmlns:l="http://schemas.livet-mvvm.net/2011/wpf"
     xmlns:v="clr-namespace:WpfOnDotNetCoreSample.Views"
     xmlns:vm="clr-namespace:WpfOnDotNetCoreSample.ViewModels"
+    xmlns:or="clr-namespace:WpfOnDotNetCoreSample.ObjectResolvers"
+    or:ViewModelResolver.InjectViewModel="True"
     Title="MainWindow"
     Width="525"
     Height="350">
-
-    <Window.DataContext>
-        <vm:MainWindowViewModel />
-    </Window.DataContext>
-
-    <behaviors:Interaction.Triggers>
+	<behaviors:Interaction.Triggers>
         <!--  When ContentRendered event raised, Initialize method of ViewModel would be called.  -->
         <behaviors:EventTrigger EventName="ContentRendered">
             <l:LivetCallMethodAction MethodName="Initialize" MethodTarget="{Binding}" />
