--- a/WpfOnDotNetCoreSample/Views/MainWindow.xaml
+++ b/WpfOnDotNetCoreSample/Views/MainWindow.xaml
@@ -7,6 +7,7 @@
     xmlns:v="clr-namespace:WpfOnDotNetCoreSample.Views"
     xmlns:vm="clr-namespace:WpfOnDotNetCoreSample.ViewModels"
     xmlns:or="clr-namespace:WpfOnDotNetCoreSample.ObjectResolvers"
+    xmlns:b="clr-namespace:WpfOnDotNetCoreSample.Views.Behaviors"
     or:ViewModelResolver.InjectViewModel="True"
     Title="MainWindow"
     Width="525"
@@ -29,10 +30,11 @@
 	<Grid>
 		<Grid.RowDefinitions>
 			<RowDefinition />
+			<RowDefinition Height="4*"/>
+			<RowDefinition />
 			<RowDefinition />
 		</Grid.RowDefinitions>
 		<Grid.ColumnDefinitions>
-			<ColumnDefinition />
 			<ColumnDefinition />
 			<ColumnDefinition />
 		</Grid.ColumnDefinitions>
@@ -41,8 +43,33 @@
             HorizontalAlignment="Center"
             FontSize="48"
 		    Text="{Binding Ellapsed.Value}" />
-		<Button Grid.Row="1" Grid.Column="0" Content="Start" Command="{Binding StartCommand}" />
-		<Button Grid.Row="1" Grid.Column="1" Content="Stop" Command="{Binding StopCommand}" />
-		<Button Grid.Row="1" Grid.Column="2" Content="Reset" Command="{Binding ResetCommand}" />
+		<Grid Grid.Row="1" Grid.ColumnSpan="2">
+			<Grid.RowDefinitions>
+				<RowDefinition />
+				<RowDefinition Height="4*"/>
+			</Grid.RowDefinitions>
+			<TextBlock Grid.Row="0" VerticalAlignment="Center" Text="Lap Times"/>
+			<ListBox Grid.Row="1" ItemsSource="{Binding LapTimes}">
+				<behaviors:Interaction.Behaviors>
+					<b:ListBoxAutoScrollBehavior />
+				</behaviors:Interaction.Behaviors>
+				<ListBox.ItemTemplate>
+					<DataTemplate>
+						<Grid>
+							<Grid.ColumnDefinitions>
+								<ColumnDefinition />
+								<ColumnDefinition />
+							</Grid.ColumnDefinitions>
+							<TextBlock Grid.Column="0" Text="{Binding CountOfLap.Value, StringFormat='Lap {0}: '}" />
+							<TextBlock Grid.Column="1" Text="{Binding LapTime.Value}" />
+						</Grid>
+					</DataTemplate>
+				</ListBox.ItemTemplate>
+			</ListBox>
+		</Grid>
+		<Button Grid.Row="2" Grid.Column="0" Content="Start" Command="{Binding StartCommand}" />
+		<Button Grid.Row="2" Grid.Column="1" Content="Lap" Command="{Binding LapCommand}" />
+		<Button Grid.Row="3" Grid.Column="0" Content="Stop" Command="{Binding StopCommand}" />
+		<Button Grid.Row="3" Grid.Column="1" Content="Reset" Command="{Binding ResetCommand}" />
 	</Grid>
 </Window>
